# terrain_recognition

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  SAFETY.md  TASKS.md  pytest.ini  x2_terrain_stair_climbing_roadmap.md
configs/: joint_limits_x2_ultra.yaml  robot_topics.yaml  safe_locomotion.yaml  safety_limits.yaml  terrain_perception.yaml  training_default.yaml
docs/: architecture.md  data_contracts.md  factory_cpgwalk_contract.md  hardware_bringup_cpgwalk.md  known_risks.md  laptop_handoff_prompt.md  real_robot_test_protocol.md  ros_topics.md  sim_to_real_checklist.md  training_method.md
logs/rsl_rl/x2_standing/2026-06-15_14-12-12/: events.out.tfevents.1781532750.brev-lg3vnb5bd.14201.0
models/x2_flat_walk_v1/: model_1000.pt  model_1050.pt  model_1100.pt  model_1200.pt  model_1500.pt  model_final.pt  policy.onnx
models/x2_flat_walk_v3/: model_final.pt  policy.onnx
models/x2_standing_v1/: model_final.pt
ros2_ws/src/x2_common/: package.xml  setup.cfg  setup.py
ros2_ws/src/x2_common/x2_common/: __init__.py  config_loader.py  joint_map.py  logging_utils.py  qos_profiles.py  safety_limits.py  time_sync.py  topic_discovery.py  transforms.py
ros2_ws/src/x2_policy_runtime/: package.xml  setup.cfg  setup.py
ros2_ws/src/x2_policy_runtime/x2_policy_runtime/: __init__.py  cpgwalk_deploy.py  joint_policy_node.py  onnx_policy_runner.py  policy_logger.py
ros2_ws/src/x2_policy_runtime/x2_policy_runtime/core/: __init__.py  action_filter.py  log_analysis.py  observation_builder.py  onnx_runner_core.py  policy_supervisor.py
ros2_ws/src/x2_safe_locomotion/: package.xml  setup.cfg  setup.py
ros2_ws/src/x2_safe_locomotion/launch/: safe_stop_demo.launch.py
ros2_ws/src/x2_safe_locomotion/x2_safe_locomotion/: __init__.py  command_smoother.py  emergency_stop_node.py  input_source_registrar.py  motion_state_monitor.py  safety_supervisor.py  velocity_adapter.py
ros2_ws/src/x2_safe_locomotion/x2_safe_locomotion/core/: __init__.py  smoother.py  supervisor.py  velocity_policy.py
ros2_ws/src/x2_terrain_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/x2_terrain_msgs/msg/: PolicyDebug.msg  SafetyDecision.msg  StairEstimate.msg  TerrainCell.msg  TerrainGrid.msg  TerrainStatus.msg
ros2_ws/src/x2_terrain_msgs/srv/: ResetTerrainMap.srv
ros2_ws/src/x2_terrain_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/x2_terrain_perception/x2_terrain_perception/: __init__.py  gap_detector.py  ground_plane_estimator.py  heightmap_node.py  offline_bag_analyzer.py  pointcloud_projector.py  slope_detector.py  stair_detector.py  terrain_classifier.py  traversability_estimator.py  visualization_node.py
ros2_ws/src/x2_terrain_perception/x2_terrain_perception/core/: __init__.py  classifier.py  gaps.py  grid_msg.py  ground_plane.py  heightmap.py  roughness.py  slope.py  stairs.py  traversability.py
tests/integration/: test_perceive_and_stop.py
tests/simulation/: test_mujoco_model.py  test_perceive_demo.py  test_smoke.py
tests/unit/: test_classifier_core.py  test_config_loader.py  test_depth_augmentation.py  test_factory_cpgwalk.py  test_gaps_core.py  test_grid_msg.py  test_ground_plane_slope.py  test_heightmap_core.py  test_pd_controller.py  test_policy_runtime_core.py  test_policy_runtime_helpers.py  test_safe_locomotion_core.py  test_safety_limits.py  test_sim_core.py  test_stairs_core.py  test_time_sync.py  test_training_core.py  test_training_scripts.py  test_transforms.py  test_traversability_core.py
tools/: analyze_policy_log.py  check_joint_order.py  check_qos.sh  check_topics.sh  compare_sim_real.py  decode_x2_bag.py  fetch_x2_assets.sh  record_terrain_bag.sh  replay_bag_heightmap.py  setup_local_isaac.sh  validate_factory_teacher.py  visualize_heightmap.py
training/: README.md
training/isaac_lab/: SETUP.md  brev_bootstrap.sh
training/isaac_lab/assets/: SOURCES.md
training/isaac_lab/scripts/: spawn_x2.py
training/isaac_lab/x2_locomotion/agents/: __init__.py  rsl_rl_ppo_cfg.py
training/isaac_lab/x2_locomotion/control/: pd.py
training/isaac_lab/x2_locomotion/cref/: aux_heads.py  cref_policy.py  cross_modal_attention.py  depth_augmentation.py  depth_encoder.py  distillation.py  factory_cpgtelecon.py  factory_cpgwalk.py  gru_fusion.py  raw_depth_dataset.py
training/isaac_lab/x2_locomotion/robots/: default_pose.py  x2_actuator_cfg.py  x2_joint_map.py  x2_robot_cfg.py
training/isaac_lab/x2_locomotion/scripts/: evaluate_policy.py  export_onnx.py  inspect_observation.py  play.py  train.py  train_cref.py
training/isaac_lab/x2_locomotion/tasks/: __init__.py
training/isaac_lab/x2_locomotion/tasks/common/: curriculum.py  domain_randomization.py  height_samples.py  network.py  observations.py  rewards.py  terminations.py  terrain_generator.py  terrain_spec.py
training/isaac_lab/x2_locomotion/tasks/flat_walk/: __init__.py  x2_flat_walk_env_cfg.py
training/isaac_lab/x2_locomotion/tasks/rough_terrain/: x2_rough_env_cfg.py
training/mujoco/: run_cpgwalk_mujoco.py  run_stand_walk_mujoco.py
training/mujoco/model/: meshes
training/mujoco/scripts/: perceive_demo.py  stand.py  validate_model.py
(+3 files in other folders)
