<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x2_common</name>
  <version>0.0.0</version>
  <description>Shared utilities for the X2 terrain locomotion stack: config loading, QoS
    profiles, geometry transforms, time sync, structured logging, safety limits, and
    topic discovery. No robot I/O of its own.</description>
  <maintainer email="liangkaifeng1987@gmail.com">X2 Terrain Locomotion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
