<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x2_policy_runtime</name>
  <version>0.0.0</version>
  <description>Phase 5/6 ONNX policy runtime: observation builder, ONNX runner, action
    filter, policy safety supervisor, logger. GATED — runs dry-run/debug only while
    REAL_ROBOT_LOW_LEVEL_LEG_POLICY_APPROVED is false.</description>
  <maintainer email="liangkaifeng1987@gmail.com">X2 Terrain Locomotion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>x2_terrain_msgs</exec_depend>
  <exec_depend>x2_common</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
