<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x2_safe_locomotion</name>
  <version>0.0.0</version>
  <description>Phase 2 safe SDK locomotion: terrain-gated velocity adapter, command
    smoother, safety supervisor and emergency stop. Velocity-level only — does not climb.</description>
  <maintainer email="liangkaifeng1987@gmail.com">X2 Terrain Locomotion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>x2_terrain_msgs</exec_depend>
  <exec_depend>x2_common</exec_depend>
  <exec_depend>x2_terrain_perception</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
